--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kimbie-light",
+  "name": "kimbie-light",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "Color scheme inspired by Mount Kimbie's second album",
